--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first website</title>
   </head>
-  <body></body>
+  <body>
+  hello world
+  
+  
+  </body>
 </html>
